[gd_scene load_steps=3 format=3 uid="uid://c38u301t38hri"]

[ext_resource type="Script" path="res://scripts/lock_ui.gd" id="1_16rf6"]
[ext_resource type="FontFile" uid="uid://bby4ub4ge7pct" path="res://Pixel Times Bold.ttf" id="2_cok2r"]

[node name="LockUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_16rf6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -440.0
offset_right = 233.0
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -197.0
offset_top = 120.0
offset_right = 197.0
offset_bottom = 292.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_top = 10.0
offset_right = 391.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -194.0
offset_right = 137.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 3

[node name="Button" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
text = "1"

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
text = "2"

[node name="Button3" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
text = "3"

[node name="Button4" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
text = "4"

[node name="Button5" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
text = "5"

[node name="Button6" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
text = "6"

[node name="Button7" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
text = "7"

[node name="Button8" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
text = "8"

[node name="Button9" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
text = "9"

[node name="Button11" type="Button" parent="GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
disabled = true

[node name="Button10" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cok2r")
theme_override_font_sizes/font_size = 100
text = "0"

[node name="Indicator" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 823.0
offset_top = 301.0
offset_right = 1097.0
offset_bottom = 333.0
color = Color(0.933333, 0.596078, 0.223529, 1)

[connection signal="pressed" from="GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="GridContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="GridContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="GridContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="GridContainer/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="GridContainer/Button10" to="." method="_on_button_10_pressed"]
